--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,41 @@ main h2, main p {
   margin: 5px;
 }
 
+button {
+  background-color: #0891B2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-size: 1em;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+button:hover {
+  background-color: #15a5ca;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+  background-color: #066982;
+  transform: translateY(0);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(14, 165, 233, 0.5);
+}
+
+button a {
+  text-decoration: none;
+  color: white;
+  margin-right: 5px;
+}
+
 /*** NAVIGATION ***/
 nav {
   height: 100%;
@@ -76,40 +111,6 @@ nav ul li a:hover {
 
 .addButtons {
   margin-top: auto;
-}
-
-.addButtons button {
-  background-color: #0891B2;
-  border: none;
-  padding: 10px 20px;
-  margin: 10px 0;
-  font-size: 1em;
-  cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.addButtons button:hover {
-  background-color: #15a5ca;
-  transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.addButtons button:active {
-  background-color: #066982;
-  transform: translateY(0);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.addButtons button:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(14, 165, 233, 0.5);
-}
-
-nav button a {
-  text-decoration: none;
-  color: white;
-  margin-right: 5px;
 }
 
 /*** DASHBOARD ***/
@@ -209,4 +210,41 @@ nav button a {
   color: #374151;
   background-color: #F9FAFB;
   height: 60%;
+}
+
+/*** POPUP ***/
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.popup-content h3 {
+  margin-top: 0;
+}
+
+.popup-content form {
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-content form label {
+  margin-bottom: 10px;
+}
+
+.popup-content form button {
+  margin-top: 10px;
 }
